plugins {
	id "com.diffplug.spotless" version "6.22.0"
	id 'org.jetbrains.kotlin.jvm' version '1.9.10'
	id 'scala'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
	mavenCentral()
}

dependencies {
	implementation "io.vavr:vavr:0.10.4"
	implementation "org.jetbrains.kotlin:kotlin-stdlib"
	implementation 'org.scala-lang:scala-library:2.13.12'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    ext {
        set('vendor', JvmVendorSpec.ADOPTIUM)
    }
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        vendor = JvmVendorSpec.ADOPTIUM
    }
    withSourcesJar()
}

spotless {
	java {
        googleJavaFormat()
	}
	kotlin {
		ktfmt()    // has its own section below
	}
	kotlinGradle {
		target '*.gradle.kts' // default target for kotlinGradle
		ktlint() // or ktfmt() or prettier()
	}
	scala {
		scalafmt() // has its own section below
	}
}
